--- a/css/structure.css
+++ b/css/structure.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -61,14 +62,13 @@ html {
   overflow-y: scroll;
   /* Horizontale Scrollbalken erzwingen */
   background: url("img/background.gif");
+  padding: 0 35px;
 }
 
 body {
-  margin: 65px auto;
   color: #555;
   font: normal 1em/150% Geneva, Helvetica, sans-serif, Verdana;
   letter-spacing: 1px;
-  width: 90%;
   max-width: 1100px;
   margin: 80px 35px;
   padding: 15px;
@@ -77,11 +77,14 @@ body {
   background: #FFF;
   border-radius: 15px;
   box-shadow: 0 0 5px #999;
+  margin: 50px auto;
   background: #F5F5F5;
 }
 body:before {
   display: block;
   padding: 1px 15px;
+  min-width: 90px;
+  text-align: center;
   line-height: 140%;
   font-size: .8em;
   font-weight: bold;
@@ -104,12 +107,21 @@ a:focus, a:hover, a:active {
   color: #F00;
 }
 
-h1, h2, h3, h4, h5, strong {
+h1, h2, h3, h4, h5, strong, legend, .org {
   font-weight: bold;
 }
 
 h1, h2, h3, h4, h5 {
   margin: 10px 0;
+}
+
+blockquote {
+  padding-left: 25px;
+  padding-right: 25px;
+}
+
+hr {
+  display: none;
 }
 
 hgroup,
@@ -129,17 +141,27 @@ footer,
   border-radius: 15px;
   box-shadow: 0 0 5px #999;
 }
-hgroup:before,
+hgroup:before, hgroup:after,
 #inner_wrap:before,
+#inner_wrap:after,
 #skiplinks:before,
+#skiplinks:after,
 header:before,
+header:after,
 aside:before,
+aside:after,
 #breadcrumb:before,
+#breadcrumb:after,
 article:before,
+article:after,
 footer:before,
-#social_buttons:before {
+footer:after,
+#social_buttons:before,
+#social_buttons:after {
   display: block;
   padding: 1px 15px;
+  min-width: 90px;
+  text-align: center;
   line-height: 140%;
   font-size: .8em;
   font-weight: bold;
@@ -184,11 +206,22 @@ nav,
   box-shadow: 0 0 5px #999;
 }
 
+#network_tools div {
+  display: block !important;
+}
+
 article h1, article h2, article h3, article h4, article h5, article h6, article p, article table, article ul, article blockqute {
   margin: 25px 0;
 }
 article ul {
   margin: 10px 20px;
+  list-style-type: disc;
+}
+article img {
+  margin: 0 15px 15px;
+  float: right;
+  border: 1px solid;
+  border-radius: 5px;
 }
 article table {
   border: 1px solid #355E64;
@@ -200,6 +233,13 @@ article th, article td {
   border: 1px solid #355E64;
 }
 
+#breadcrumb h2, #breadcrumb div {
+  display: inline;
+}
+
+/*
+  Content für die Box-Überschriften
+*/
 body:before {
   content: 'Body';
 }
@@ -214,6 +254,12 @@ header:before {
 
 #inner_wrap:before {
   content: 'Inner Wrap';
+}
+
+#inner_wrap:after {
+  content: 'Inner Wrap ends';
+  top: auto;
+  bottom: -10px;
 }
 
 aside:before {
@@ -234,6 +280,12 @@ article:before {
 
 footer:before {
   content: 'Footer';
+}
+
+footer:after {
+  content: 'Footer ends';
+  top: auto;
+  bottom: -10px;
 }
 
 #social_buttons:before {
